03-gitops/apps/02-media/navidrome/navidrome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: navidrome.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-path
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /navidrome
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
